feat: form styling and command update

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ code {
   --text-error: red;
   --text-form: #4f4e4e;
   --header-color: #5d84bd;
+  --form-background-colour: #bee4d7;
   
   --text-xs: 12px;
   --text-sm: 14px;
